﻿## PLUXML 5.x (sortie : xx/xx/2015) ##
BUG fix #104: Message d'erreur lorsqu'on essaye d’accéder à une page statique non active
BUG fix #108: Changement de langue non pris en compte sur l'écran d'installation

## PLUXML 5.4 (sortie : 13/07/2015) ##

[+] Nouveau thème par défaut
[+] Nouvelle interface d'administration en responsive design
[+] Aménagement du gestionnaire de médias
[+] Ajout traduction en occitan (contribution Rubén)
[+] Correction traduction de l'italien (contribution nikynik)
[+] Lien en nofollow pour les auteurs des commentaires
[+] issue #76: plxShow::lastComList affichage du titre de l'article des commentaires avec la variable #com_art_title (contribution Suricat)
[+] issue #73: Formatage des jours sur 1 ou 2 chiffres avec les variables #num_day(1) ou #num_day(2)
[+] Administration > Paramètres > Configuration Avancée: ajout champ "Emplacement du fichier css personnel pour customisation de l'interface d'administration (option)"
[+] classe plxPlugin: ajout de la méthode delParam (contribution jormun)
[+] plxShow::artChapo() : ajout du paramètre optionnel anchor (contribution jerrywham)
[+] plxShow::staticInclude() : possibilité d'inclure une page statique à partir de son titre ou de son url
[+] #78: Tri aléatoire des articles (random)
[+] plxShow: ajout du hook plxShowStaticContentBegin
BUG fix #77: fct artFeed: lien rss pour les catégories incomplet
BUG fix #51: L'accès à l'écran d'administration des commentaires est impossible si les commentaires sont désactivés dans les paramètres de base de PluXml
BUG Correction d'une possible auth-bypass (contribution jvoisin)
BUG Prise en compte des liens en // dans la réécriture d'url
BUG Mauvaise position du menu d'accès au fichier admin.php d'un plugin dans la sidebar d'administration si position non renseignée
BUG Gestionnaire de médias: affichage du lien pour visualiser la miniature même si l'image n'existe pas sur le serveur

## PLUXML 5.3.1 (sortie : 13/03/2014) ##
